--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 astroid==1.5.3
 backports.functools-lru-cache==1.4
-boto==2.47.0
+-e git+https://github.com/C2Devel/boto.git@f0a4312d20f22fe663fe306bd80af98e0a4cd180#egg=boto
 c2client==0.3
 click==6.7
 configparser==3.5.0
@@ -9,6 +9,7 @@ Flask==0.12.2
 isort==4.2.15
 itsdangerous==0.24
 Jinja2==2.9.6
+jsonpickle==0.9.4
 lazy-object-proxy==1.3.1
 lxml==3.8.0
 MarkupSafe==1.0
